--- a/src/app/views/mainview/mainview.component.html
+++ b/src/app/views/mainview/mainview.component.html
@@ -1,7 +1,7 @@
 <!--div [innerHtml]="buildedPhrases" id="spawnarea">
 </div-->
 
-<div class="homearea">
+<div class="homearea displayshadow">
   <img src="assets/svg/mainview/{{data.filename}}"
        id="{{data.alt}}" class="phrase animation"
        *ngFor="let data of phrases; let i = index"
