--- a/src/app/guudcomponents/footer/footer.component.scss
+++ b/src/app/guudcomponents/footer/footer.component.scss
@@ -9,22 +9,22 @@
   width: 52vw;
   margin: auto;
   border-bottom: 0.16rem solid #ddd;
-  height: 17vh;
+  height: 10rem;
   ul {
     list-style: none;
     color: #1b4544;
-    font-size: 0.8vw;
+    font-size: 1rem;
     li {
       margin-bottom: 0.5vw;
       .bubble {
         color: #fff;
         background-color: #1b4544;
-        width: 1.5vw;
-        height: 1.5vw;
+        width: 1.6rem;
+        height: 1.6rem;
         display: block;
         border-radius: 100%;
         text-align: center;
-        line-height: 1.4vw;
+        line-height: 1.6rem;
       }
     }
   }
