--- a/src/app/guudcomponents/menu/topbar/topbar.component.scss
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.scss
@@ -8,23 +8,31 @@
 .menubar {
   position: sticky;
   width: 100%;
-  height: 6.6vh;
+  height: 3.5rem;
   background-color: #FFF;
   top: 0;
   z-index: 2;
+  box-shadow: 0 3px 6px -2px #737373;
 }
 
 
 .navigation {
   list-style: none;
-  //background-color: #ff00002e;
-  width: 59.9vw;
-  right: 6.6vw;
+  background-color: #f8f8f8;
+  padding: 0;
+  width: 66vw;
+  right: 0vw;
   position: absolute;
 }
 .navigation li {
   display: inline-block;
-  //background-color: #16008042;
+  height: 3.5rem;
   padding: 0.8vw 0.67vw;
-  font-size: 0.93vw;
+  font-size: 1rem;
+  &:hover{
+    cursor: default;
+    &:not(.nocursor){
+      cursor: pointer;
+    }
+  }
 }
