--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+@import 'fonts.scss';
+$gray-font: #707070;
+$blue-font: #1b4544;
+
+
 $animationtime: 1s;
 $animationtimeslow: 2s;
 
@@ -29,4 +34,71 @@ $animationtimeslow: 2s;
   top: 0;
   left: -15px;
   z-index: -1;
+}
+
+.displayshadow {
+  box-shadow: inset 0 10px 100px #d4d4d4, inset 0 0 100px #d4d4d4;
+}
+
+
+
+.labeledinput {
+  width: 100%;
+  position: relative;
+  .inputdeco {
+    position: absolute;
+    right: 1rem;
+    top: 1.8rem;
+    width: 2rem;
+    height: 2rem;
+    color: #b0b0b2;
+    & ~ input {
+      padding-right: 3.2rem;
+    }
+  }
+  span:not(.inputdeco) {
+    color: $blue-font;
+    position: absolute;
+    left: 0;
+    top: -0.4rem;
+    padding-left: 1rem;
+    font-family: Exo;
+  }
+}
+
+input, select, .fileinput {
+  &[type="file"]{
+    display: none;
+  }
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  padding: 0.5rem;
+  margin: 1rem 0;
+  border-radius: 0.6rem;
+  border: 1px solid $gray-font;
+  font-family: Exo;
+  color: $blue-font;
+  width: 100%;
+  height: 3.6rem;
+  margin-bottom: 2.2rem;
+  background-color: #fff;
+  padding: 0 1rem;
+  line-height: 3.6rem;
+}
+
+.guudform {
+  padding: 4rem 0.6rem;
+  [class*="col-"], .row {
+    padding: 0 1.8rem 0 0;
+  }
+  button {
+    width: 100%;
+    height: 4.6rem;
+    border: none;
+    border-radius: 6rem;
+    background-color: #68e242;
+    color: #FFF;
+    font-size: 1.7rem;
+    box-shadow: 0 1rem 4rem -2rem #000;
+  }
 }
