--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "Exo";
-  src: url('./assets/fonts/ExoRegular.ttf') format('truetype');
+  src: url('assets/fonts/ExoRegular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Verveine";
-  src: url('./assets/fonts/VerveineRegular.ttf') format('truetype');
+  src: url('assets/fonts/VerveineRegular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
