--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
   font-family: "Exo";
   src: url('assets/fonts/ExoRegular.ttf') format('truetype');
   font-weight: normal;
@@ -9,7 +9,7 @@
   src: url('assets/fonts/VerveineRegular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
+}*/
 
 $gray-font: #707070;
 $blue-font: #1b4544;
