--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,15 +1,15 @@
-/*@font-face {
+@font-face {
   font-family: "Exo";
-  src: url('assets/fonts/ExoRegular.ttf') format('truetype');
+  src: url('./assets/fonts/ExoRegular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Verveine";
-  src: url('assets/fonts/VerveineRegular.ttf') format('truetype');
+  src: url('./assets/fonts/VerveineRegular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}*/
+}
 
 $gray-font: #707070;
 $blue-font: #1b4544;
