--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -6,7 +6,7 @@
 }
 @font-face {
   font-family: "Verveine";
-  src: url('./assets/VerveineRegular.ttf') format('truetype');
+  src: url('./assets/VerveineRegular.TTF') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
