--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -1,24 +1,26 @@
-<div class="display displayshadow">
-  <div class="toparea">
-    <h1>we are good people, <br> who wants the best of you!</h1>
-    <h4>Our purpose is create wellness and happiness around the world!</h4>
-  </div>
-  <div class="icons row">
-    <div class="col-4">
-      <img src="assets/svg/aboutus/Mission.svg" class="svgic" onload="SVGInject(this)">
-      <h3>Mission:</h3>
-      <h5>Hack brains and shape bodies</h5>
+<div class="displayshadow">
+  <div class="display">
+    <div class="toparea">
+      <h1>we are good people, <br> who wants the best of you!</h1>
+      <h4>Our purpose is create wellness and happiness around the world!</h4>
     </div>
-    <div class="col-4">
-      <img src="assets/svg/aboutus/Vision.svg" class="svgic" onload="SVGInject(this)">
-      <h3>Vision:</h3>
-      <h5>Find the Guud in YOU. Let's Go!</h5>
-      <span style="font-family: Verveine;font-size: 5rem;position: relative;bottom: -0.7rem; color:#707070">P.S Be Good!</span>
-    </div>
-    <div class="col-4">
-      <img src="assets/svg/aboutus/Core Values.svg" class="svgic" onload="SVGInject(this)">
-      <h3>Core values:</h3>
-      <h5>Passion, Innovation & Fun</h5>
+    <div class="icons row">
+      <div class="col-4">
+        <img src="assets/svg/aboutus/Mission.svg" class="svgic" onload="SVGInject(this)">
+        <h3>Mission:</h3>
+        <h5>Hack brains and shape bodies</h5>
+      </div>
+      <div class="col-4">
+        <img src="assets/svg/aboutus/Vision.svg" class="svgic" onload="SVGInject(this)">
+        <h3>Vision:</h3>
+        <h5>Find the Guud in YOU. Let's Go!</h5>
+        <span style="font-family: Verveine;font-size: 5rem;position: relative;bottom: -0.7rem; color:#707070">P.S Be Good!</span>
+      </div>
+      <div class="col-4">
+        <img src="assets/svg/aboutus/Core Values.svg" class="svgic" onload="SVGInject(this)">
+        <h3>Core values:</h3>
+        <h5>Passion, Innovation & Fun</h5>
+      </div>
     </div>
   </div>
 </div>
