--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -1,79 +1,81 @@
-<div class="display displayshadow">
-  <div class="row" style="width: 80%;margin: auto;">
-    <div class="col-6">
+<div class="displayshadow">
+  <div class="display">
+    <div class="row" style="margin: auto;">
+      <div class="col-6">
 
-      <form class="guudform">
-        <div class="row" style="margin-bottom: 2rem;">
-          <div class="col-12">
-            <h2>Coach</h2>
+        <form class="guudform">
+          <div class="row" style="margin-bottom: 2rem;">
+            <div class="col-12">
+              <h2>Coach</h2>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-6">
-            <label class="labeledinput">
-              <input type="text">
-              <span>First Name</span>
-            </label>
+          <div class="row">
+            <div class="col-6">
+              <label class="labeledinput">
+                <input type="text">
+                <span>First Name</span>
+              </label>
+            </div>
+            <div class="col-6">
+              <label class="labeledinput">
+                <input type="text">
+                <span>Last Name</span>
+              </label>
+            </div>
           </div>
-          <div class="col-6">
-            <label class="labeledinput">
-              <input type="text">
-              <span>Last Name</span>
-            </label>
+          <div class="row">
+            <div class="col-12">
+              <label class="labeledinput">
+                <img class="inputdeco" src="assets/svg/cheveron-down.svg"
+                onload="SVGInject(this)">
+                <select>
+                  <option disabled selected>Pick one...</option>
+                  <option value="">Box</option>
+                  <option value="">Pilates</option>
+                </select>
+                <span>Speciality</span>
+              </label>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <label class="labeledinput">
-              <img class="inputdeco" src="assets/svg/cheveron-down.svg"
-                   onload="SVGInject(this)">
-              <select>
-                <option disabled selected>Pick one...</option>
-                <option value="">Box</option>
-                <option value="">Pilates</option>
-              </select>
-              <span>Speciality</span>
-            </label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-6">
-            <label class="labeledinput">
-              <input type="text">
-              <span>Instagram</span>
-            </label>
-          </div>
-          <div class="col-6">
+          <div class="row">
+            <div class="col-6">
+              <label class="labeledinput">
+                <input type="text">
+                <span>Instagram</span>
+              </label>
+            </div>
+            <div class="col-6">
 
-            <label class="labeledinput">
-              <input type="text">
-              <span>Tiktok</span>
-            </label>
+              <label class="labeledinput">
+                <input type="text">
+                <span>Tiktok</span>
+              </label>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-6">
-            <label class="labeledinput">
-              <input type="text">
-              <span>Email</span>
-            </label>
+          <div class="row">
+            <div class="col-6">
+              <label class="labeledinput">
+                <input type="text">
+                <span>Email</span>
+              </label>
+            </div>
+            <div class="col-6">
+              <label class="labeledinput">
+                <input type="text">
+                <span>Phone</span>
+              </label>
+            </div>
           </div>
-          <div class="col-6">
-            <label class="labeledinput">
-              <input type="text">
-              <span>Phone</span>
-            </label>
+          <br>
+          <div class="row">
+            <div class="col-8 m-auto"><button type="button">Send</button></div>
           </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-8 m-auto"><button type="button">Send</button></div>
-        </div>
-      </form>
+        </form>
 
-    </div>
-    <div class="col-6">
-      <img src="assets/svg/coach/Guud-Coach@2x.png" alt="" style="width: 36.6vw; position: relative; left: -4.6rem; top: -6.1rem;">
+      </div>
+      <div class="col-6">
+        <img src="assets/svg/coach/Guud-Coach@2x.png" alt="" style="width: 36.6vw; position: relative; margin: auto;display: block;; top: -6.1rem;left: -5rem;">
+      </div>
     </div>
   </div>
 </div>
