--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,11 @@ $animationtimeslow: 2s;
   box-shadow: inset 0 10px 100px #d4d4d4, inset 0 0 100px #d4d4d4;
 }
 
+.display {
+  width: 57%;
+  margin: auto;
+}
+
 
 
 .labeledinput {
