--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -1,7 +1,7 @@
 <div class="displayshadow">
-  <div class="display">
+  <div class="col-sm-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7 m-auto">
     <div class="row" style="margin: auto;">
-      <div class="col-6">
+      <div class="col-xl-6 col-md-7 col-sm-8 m-auto">
 
         <form class="guudform">
           <div class="row" style="margin-bottom: 2rem;">
@@ -10,58 +10,58 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-6">
-              <label class="labeledinput">
-                <input type="text">
+            <div class="col-12 col-sm-6">
+              <label class="labeledinput" [ngClass]="{'active': dataFormat.firstName}">
+                <input type="text" [(ngModel)]="dataFormat.firstName" name="firstName">
                 <span>First Name</span>
               </label>
             </div>
-            <div class="col-6">
-              <label class="labeledinput">
-                <input type="text">
+            <div class="col-12 col-sm-6">
+              <label class="labeledinput" [ngClass]="{'active': dataFormat.lastName}">
+                <input type="text" [(ngModel)]="dataFormat.lastName" name="lastName">
                 <span>Last Name</span>
               </label>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <label class="labeledinput">
+              <label class="labeledinput" [ngClass]="{'active': dataFormat.special}">
                 <img class="inputdeco" src="assets/svg/cheveron-down.svg"
                 onload="SVGInject(this)">
-                <select>
-                  <option disabled selected>Pick one...</option>
-                  <option value="">Box</option>
-                  <option value="">Pilates</option>
+                <select [(ngModel)]="dataFormat.special" name="special">
+                  <option label=" " disabled></option>
+                  <option [value]="'box'">Box</option>
+                  <option [value]="'pilates'">Pilates</option>
                 </select>
                 <span>Speciality</span>
               </label>
             </div>
           </div>
           <div class="row">
-            <div class="col-6">
-              <label class="labeledinput">
-                <input type="text">
+            <div class="col-12 col-sm-6">
+              <label class="labeledinput" [ngClass]="{'active': dataFormat.instagram}">
+                <input type="text" [(ngModel)]="dataFormat.instagram" name="instagram">
                 <span>Instagram</span>
               </label>
             </div>
-            <div class="col-6">
+            <div class="col-12 col-sm-6">
 
-              <label class="labeledinput">
-                <input type="text">
+              <label class="labeledinput" [ngClass]="{'active': dataFormat.tiktok}">
+                <input type="text" [(ngModel)]="dataFormat.tiktok" name="tiktok">
                 <span>Tiktok</span>
               </label>
             </div>
           </div>
           <div class="row">
-            <div class="col-6">
-              <label class="labeledinput">
-                <input type="text">
+            <div class="col-12 col-sm-6">
+              <label class="labeledinput" [ngClass]="{'active': dataFormat.email}">
+                <input type="text" [(ngModel)]="dataFormat.email" name="email">
                 <span>Email</span>
               </label>
             </div>
-            <div class="col-6">
-              <label class="labeledinput">
-                <input type="text">
+            <div class="col-12 col-sm-6">
+              <label class="labeledinput" [ngClass]="{'active': dataFormat.phone}">
+                <input type="text" [(ngModel)]="dataFormat.phone" name="phone">
                 <span>Phone</span>
               </label>
             </div>
@@ -73,8 +73,8 @@
         </form>
 
       </div>
-      <div class="col-6">
-        <img src="assets/svg/coach/Guud-Coach@2x.png" alt="" style="width: 36.6vw; position: relative; margin: auto;display: block;; top: -6.1rem;left: -5rem;">
+      <div class="col-xl-6 col-md-5 col-sm-8 m-auto">
+        <img src="assets/svg/coach/Guud-Coach@2x.png" alt="" style="width: 36.6vw; position: relative; margin: auto;display: block;; top: -6.1rem;">
       </div>
     </div>
   </div>
