--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ $blue-font: #1b4544;
 
 $animationtime: 1s;
 $animationtimeslow: 2s;
+$inputtransition: .23s;
 
 *{
   transition: all $animationtime ease-out;
@@ -20,6 +21,14 @@ $animationtimeslow: 2s;
   -moz-transition: all $animationtimeslow ease-out;
   -ms-transition: all $animationtimeslow ease-out;
   -o-transition: all $animationtimeslow ease-out;
+}
+
+.labeledinput * {
+  transition: all $inputtransition ease-out;
+  -webkit-transition: all $inputtransition ease-out;
+  -moz-transition: all $inputtransition ease-out;
+  -ms-transition: all $inputtransition ease-out;
+  -o-transition: all $inputtransition ease-out;
 }
 
 @keyframes shake {
@@ -53,24 +62,38 @@ $animationtimeslow: 2s;
   .inputdeco {
     position: absolute;
     right: 1rem;
-    top: 1.8rem;
+    top: 1.5rem;
     width: 2rem;
     height: 2rem;
     color: #b0b0b2;
-    & ~ input {
+    & ~ input, ~ select, ~ .fileinput {
       padding-right: 3.2rem;
     }
   }
   span:not(.inputdeco) {
-    color: $blue-font;
+    color: #a2a1a1;
     position: absolute;
     left: 0;
-    top: -0.4rem;
+    top: 1.75rem;
     padding-left: 1rem;
     font-family: Exo;
   }
+  &.active {
+    span:not(.inputdeco) {
+      top: -0.6rem;
+      color: $blue-font;
+    }
+  }
 }
-
+.fileinput{
+  z-index: 0;
+  p {
+    width: 100%;
+    height: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+}
 input, select, .fileinput {
   &[type="file"]{
     display: none;
@@ -84,17 +107,24 @@ input, select, .fileinput {
   font-family: Exo;
   color: $blue-font;
   width: 100%;
-  height: 3.6rem;
+  height: 3rem;
   margin-bottom: 2.2rem;
   background-color: #fff;
   padding: 0 1rem;
-  line-height: 3.6rem;
+  line-height: 3rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+
+  &:focus ~ span:not(.inputdeco) {
+    top: -0.6rem;
+    color: $blue-font;
+  }
 }
 
 .guudform {
   padding: 4rem 0.6rem;
   [class*="col-"], .row {
-    padding: 0 1.8rem 0 0;
+    //padding: 0 1.8rem 0 0;
   }
   button {
     width: 100%;
