--- a/src/app/guudcomponents/footer/footer.component.html
+++ b/src/app/guudcomponents/footer/footer.component.html
@@ -1,23 +1,27 @@
 <div style="position: relative;background-color: #f8f8f8;">
-  <div class="footerarea">
-    <img src="assets/logotipo.svg" alt="" class="logo">
-    <ul class="sections1">
-      <li>About us</li>
-      <li>History</li>
-      <li>Purpose</li>
-    </ul>
-    <ul class="sections2">
-      <li>Stories</li>
-      <li>Caring & giving</li>
-      <li>Sustainability</li>
-    </ul>
-    <ul class="social">
-      <li>Follow us!</li>
-      <li><span class="icon-facebook bubble"></span></li>
-      <li><span class="icon-instagram bubble"></span></li>
-      <li><span class="icon-twitter bubble"></span></li>
-      <li><span class="icon-linkedin2 bubble"></span></li>
-    </ul>
+  <div class="footerarea col-10 col-sm-7 col-md-10 col-lg-9 col-xl-8 col-xxl-7 m-auto">
+    <div class="row">
+      <div class="col-12 col-md-3 m-auto">
+        <img [routerLink]="'/'" src="assets/logotipo.svg" alt="" class="logo">
+      </div>
+      <ul class="sections1 col-6 col-md-3 m-auto">
+        <li [routerLink]="'/aboutus'">About us</li>
+        <li [routerLink]="'/history'">History</li>
+        <li>Purpose</li>
+      </ul>
+      <ul class="sections2 col-6 col-md-3 m-auto">
+        <li>Stories</li>
+        <li>Caring & giving</li>
+        <li>Sustainability</li>
+      </ul>
+      <ul class="social col-12 col-md-3 m-auto">
+        <li>Follow us!</li>
+        <li><span class="icon-facebook bubble"></span></li>
+        <li><span class="icon-instagram bubble"></span></li>
+        <li><span class="icon-twitter bubble"></span></li>
+        <li><span class="icon-linkedin2 bubble"></span></li>
+      </ul>
+    </div>
   </div>
   <!--img src="assets/ref/footer.png" alt="" class="reference" style=""-->
   <div class="rights">GUUD&#174; 2023 <span class="separator"></span> Todos los derechos reservados</div>
