--- a/src/app/guudcomponents/menu/topbar/topbar.component.html
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.html
@@ -1,5 +1,6 @@
 <div class="menubar">
   <img [routerLink]="'/'" src="assets/logotipo.svg" alt="" class="logo">
+
   <ul class="navigation">
     <li [routerLink]="'/aboutus'" style="background-color:#fff;">About us</li>
     <li [routerLink]="'/history'" style="background-color:#fff;">History</li>
@@ -11,4 +12,7 @@
     <li class="bluefont " [routerLink]="'/supplier'" style="font-weight:bold;">Supplier</li>
     <li class="bluefont " [routerLink]="'/coach'" style="font-weight:bold;">Coach</li>
   </ul>
+  
+  <guud-burguermenu></guud-burguermenu>
+
 </div>
