--- a/src/app/guudcomponents/menu/topbar/topbar.component.scss
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.scss
@@ -1,12 +1,12 @@
-
 .logo {
   position: absolute;
-  width: 9.4vw;
-  top: -0.8vw;
-  left: 21.4vw;
+  width: 10rem;
+  top: -0.6rem;
+  left: 23.4%;
 }
+
 .menubar {
-  position: sticky;
+  position: fixed;
   width: 100%;
   height: 3.5rem;
   background-color: #FFF;
@@ -15,23 +15,25 @@
   box-shadow: 0 3px 6px -2px #737373;
 }
 
-
 .navigation {
   list-style: none;
   background-color: #f8f8f8;
   padding: 0;
   width: 57.2vw;
-  right: 0vw;
+  right: 0;
   position: absolute;
 }
+
 .navigation li {
   display: inline-block;
   height: 3.5rem;
   padding: 0.8vw 0.67vw;
   font-size: 1rem;
-  &:hover{
+
+  &:hover {
     cursor: default;
-    &:not(.nocursor){
+
+    &:not(.nocursor) {
       cursor: pointer;
     }
   }
