--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -1,27 +1,36 @@
 <div class="displayshadow">
-  <div class="display">
-    <div class="toparea">
-      <h1>we are good people, <br> who wants the best of you!</h1>
-      <h4>Our purpose is create wellness and happiness around the world!</h4>
+  <div class="display col-11 col-lg-10 col-xl-9 col-xxl-7 m-auto">
+    <div class="row">
+      <div class="col-12">
+        <h1>we are good people, <br> who wants the best of you!</h1>
+        <h4>Our purpose is create wellness and happiness around the world!</h4>
+      </div>
     </div>
     <div class="icons row">
-      <div class="col-4">
+      <div class="col-12 col-md-4">
         <img src="assets/svg/aboutus/Mission.svg" class="svgic" onload="SVGInject(this)">
         <h3>Mission:</h3>
         <h5>Hack brains and shape bodies</h5>
       </div>
-      <div class="col-4">
+      <div class="col-12 col-md-4">
         <img src="assets/svg/aboutus/Vision.svg" class="svgic" onload="SVGInject(this)">
         <h3>Vision:</h3>
         <h5>Find the Guud in YOU. Let's Go!</h5>
-        <span style="font-family: Verveine;font-size: 5rem;position: relative;bottom: -0.7rem; color:#707070">P.S Be Good!</span>
       </div>
-      <div class="col-4">
+      <div class="col-12 col-md-4">
         <img src="assets/svg/aboutus/Core Values.svg" class="svgic" onload="SVGInject(this)">
         <h3>Core values:</h3>
         <h5>Passion, Innovation & Fun</h5>
       </div>
     </div>
+    <div class="row">
+      <div class="col-8 m-auto">
+        <h6>
+          P.S Be Good!
+        </h6>
+      </div>
+    </div>
+    <br>
   </div>
 </div>
 
