--- a/src/app/views/aboutus/aboutus.component.scss
+++ b/src/app/views/aboutus/aboutus.component.scss
@@ -1,7 +1,6 @@
 .display {
-  //padding: 5.3rem 10rem;
-  height: 55rem;
-  padding-top: 5.3rem;
+  padding-top: 2.3rem;
+  padding-bottom: 2rem;
 }
 
 .icons {
@@ -28,4 +27,9 @@
   left: calc(50% - 3rem);
   width: 6rem;
   height: 6rem;
+}
+
+
+.icons.row .col-12.col-md-4 {
+  margin-bottom: 3rem;
 }
