--- a/src/app/views/supplier/supplier.component.html
+++ b/src/app/views/supplier/supplier.component.html
@@ -2,67 +2,10 @@
   <div class="col-sm-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7 m-auto">
     <div class="row" style="margin: auto;">
       <div class="col-xl-6 col-md-7 col-sm-8 m-auto">
-
-        <form class="guudform">
-          <div class="row" style="margin-bottom: 2rem;">
-            <div class="col-12">
-              <h2>Supplier</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12 col-sm-6">
-              <label class="labeledinput" [ngClass]="{'active': dataFormat.firstName}">
-                <input type="text" [(ngModel)]="dataFormat.firstName" name="firstName">
-                <span>First Name</span>
-              </label>
-            </div>
-            <div class="col-12 col-sm-6">
-              <label class="labeledinput" [ngClass]="{'active': dataFormat.lastName}">
-                <input type="text" [(ngModel)]="dataFormat.lastName" name="lastName">
-                <span>Last Name</span>
-              </label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12 col-sm-6">
-              <label class="labeledinput" [ngClass]="{'active': dataFormat.product}">
-                <input type="text" [(ngModel)]="dataFormat.product" name="product">
-                <span>Product</span>
-              </label>
-            </div>
-            <div class="col-12 col-sm-6">
-              <label class="labeledinput" [ngClass]="{'active': dataFormat.filename}">
-                <img class="inputdeco" src="assets/svg/supplier/Clip.svg"
-                onload="SVGInject(this)">
-                <input type="file" (change)="_setfiles($event)">
-                <div class="fileinput"><p>{{dataFormat.filename}}</p></div>
-                <span>Product Images</span>
-              </label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12 col-sm-6">
-              <label class="labeledinput" [ngClass]="{'active': dataFormat.email}">
-                <input type="text" [(ngModel)]="dataFormat.email" name="email">
-                <span>Email</span>
-              </label>
-            </div>
-            <div class="col-12 col-sm-6">
-              <label class="labeledinput" [ngClass]="{'active': dataFormat.phone}">
-                <input type="text" [(ngModel)]="dataFormat.phone" name="phone">
-                <span>Phone</span>
-              </label>
-            </div>
-          </div>
-          <br>
-          <div class="row">
-            <div class="col-8 m-auto"><button type="button">Send</button></div>
-          </div>
-        </form>
-
+        <guudform-besupplier></guudform-besupplier>
       </div>
       <div class="col-xl-6 col-md-5 col-sm-8 m-auto">
-        <img src="assets/svg/supplier/Guud-Coach@2x.png" alt="" style="width: 36.6vw;position: relative;margin: auto;display: block;top: -3.6rem;">
+        <img src="assets/svg/supplier/Guud-Coach@2x.png" alt="" class="formimage">
       </div>
     </div>
   </div>
