Correcciones mobil, detallitos

--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -1,8 +1,8 @@
-<div class="displayshadow">
+<div [ngClass]="{'displayshadow':_apply}">
   <div class="display col-11 col-lg-10 col-xl-9 col-xxl-7 m-auto">
     <div class="row">
       <div class="col-12">
-        <h1>we are good people, <br> who wants the best of you!</h1>
+        <h1>We are good people, <br> who wants the best of you!</h1>
         <h4>Our purpose is create wellness and happiness around the world!</h4>
       </div>
     </div>
