--- a/src/app/views/history/history.component.html
+++ b/src/app/views/history/history.component.html
@@ -1,3 +1,3 @@
-<div class="displayshadow" style="background-color: #70707094;">
+<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094;">
   <img src="assets/svg/playbtn.svg" alt="" class="playbutton">
 </div>
