--- a/src/app/views/supplier/supplier.component.html
+++ b/src/app/views/supplier/supplier.component.html
@@ -1,4 +1,4 @@
-<div class="displayshadow">
+<div [ngClass]="{'displayshadow':_apply}">
   <div class="col-sm-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7 m-auto">
     <div class="row" style="margin: auto;">
       <div class="col-xl-6 col-md-7 col-sm-8 m-auto">
