Mejoras en el motor de animaciones: - Tiempos de respuesta - Administracion de animaciones - Prevencion de repeticiones - Adaptacion a mobil

--- a/src/app/views/mainview/mainview.component.html
+++ b/src/app/views/mainview/mainview.component.html
@@ -1,5 +1,5 @@
 <div class="homearea" [ngClass]="{'displayshadow':_apply}">
-  <guud-imageplacer [imageList]="phrases" [mobilekeys]="mobilekeys"></guud-imageplacer>
+  <guud-imageplacer [mobilekeys]="mobilekeys" [imageList]="phrasesMainView"></guud-imageplacer>
 </div>
 <!--img src="assets/ref/mob1.png" alt="" class="reference" style="width: 100vw;  object-fit: contain;top: 0;left: 0rem;"-->
 <!--guudview-aboutus [_applyshadow]="false"></guudview-aboutus>
