--- a/src/app/guudcomponents/individuales/imageplacer/imageplacer.component.html
+++ b/src/app/guudcomponents/individuales/imageplacer/imageplacer.component.html
@@ -1,39 +1,26 @@
-<!--div class="webdisplay">
-  <div *ngFor="let _data of _imageList; let i = index">
-    <img class="phrase animation" id="{{_data.alt}}"
-        src="assets/svg/mainview/{{_data.filename}}"
-        style="{{_data.webStyle}}" onload="SVGInject(this)">
-  </div>
-</div-->
 <div class="webdisplay">
-  <img src="assets/svg/mainview/{{_data.filename}}"
-       alt="{{_data.alt}}" id="web{{_data.alt}}"
-       class="phrase animation" [style]="_data.webStyle"
-       (load)="_checktype($event, _data.filename)" *ngFor="let _data of _centerDisplay;">
+  <img src="assets/svg/mainview/{{_data.filename}}" class="phrase animation nohover"
+       [style]="_data.webStyle" (load)="_checktype($event, _data.filename)"
+       *ngFor="let _data of _imageList.grupocentral.files;">
+  <img src="assets/svg/mainview/{{_data.filename}}" class="phrase animation" id="web{{_data.alt}}"
+       [style]="_data.webStyle" (load)="_checktype($event, _data.filename)"
+       *ngFor="let _data of _imageList.grupomysc.files;">
 
- <div *ngFor="let key of _mobilekeys; let i = index">
-   <div *ngFor="let _data of _imageList[key].files">
-     <img class="phrase animation" id="web{{_data.alt}}"
-          src="assets/svg/mainview/{{_data.filename}}"
-          [style]="_data.webStyle"
-          onload="SVGInject(this)">
-   </div>
- </div>
+  <div *ngFor="let key of _mobilekeys">
+    <div *ngFor="let _data of _imageList[key].files">
+      <img class="phrase animation" id="web{{_data.alt}}" src="assets/svg/mainview/{{_data.filename}}" [style]="_data.webStyle" (load)="_checktype($event, _data.filename)">
+    </div>
+  </div>
 </div>
 
-
 <div class="mobdisplay">
-  <img src="assets/svg/mainview/{{_data.filename}}"
-       alt="{{_data.alt}}" id="mob{{_data.alt}}"
-       class="phrase animation" [style]="_data.mobileStyle"
-       (load)="_checktype($event, _data.filename)" *ngFor="let _data of _imageList.grupocentral.files;">
+  <img src="assets/svg/mainview/{{_data.filename}}" class="phrase animation nohover"
+       [style]="_data.mobileStyle" (load)="_checktype($event, _data.filename)"
+       *ngFor="let _data of _imageList.grupocentral.files;">
 
-  <div *ngFor="let key of _mobilekeys; let i = index">
-    <div *ngFor="let _data of _imageList[key].files">
-      <img class="phrase animation" id="mob{{_data.alt}}"
-           src="assets/svg/mainview/{{_data.filename}}"
-           [style]="_data.mobileStyle" *ngIf="_data.onDisplay"
-           onload="SVGInject(this)">
+  <div *ngFor="let key of _mobilekeys" class="phrasearea">
+    <div *ngFor="let _data of _imageList[key].files; let i = index">
+      <img class="phrase animation" id="mob{{_data.alt}}" [ngClass]="{'ondisplay':i==_imageList[key].files.length-1}" src="assets/svg/mainview/{{_data.filename}}" [style]="_data.mobileStyle" (load)="_checktype($event, _data.filename)">
     </div>
   </div>
 </div>
