Detalles en estilos

--- a/src/app/views/aboutus/aboutus.component.scss
+++ b/src/app/views/aboutus/aboutus.component.scss
@@ -33,3 +33,9 @@
 .icons.row .col-12.col-md-4 {
   margin-bottom: 3rem;
 }
+
+@media (max-width: 909px){
+  .icons.row .col-12.col-md-4 {
+    margin-bottom: 7rem;
+  }
+}
