Ajustes de espaciado

--- a/src/app/guudcomponents/formularios/becoach/becoach.component.html
+++ b/src/app/guudcomponents/formularios/becoach/becoach.component.html
@@ -25,8 +25,8 @@
         onload="SVGInject(this)">
         <select [(ngModel)]="dataFormat.special" name="special">
           <option label=" " disabled></option>
-          <option [value]="'box'">Box</option>
-          <option [value]="'pilates'">Pilates</option>
+          <option [value]="'tips'">Tips</option>
+          <option [value]="'ejercicios'">Ejercicios</option>
         </select>
         <span>Speciality</span>
       </label>
