Optimizaciones y Multilenguaje - Dependencias de localization - Etiquetas i18n - Exportacion de archivos locale - Ajuste de angular.json para definir local default. - Mejoras de espaciados en formularios y frases mobil

--- a/src/app/guudcomponents/footer/footer.component.html
+++ b/src/app/guudcomponents/footer/footer.component.html
@@ -2,20 +2,20 @@
   <div class="footerarea col-10 col-sm-7 col-md-10 col-lg-9 col-xl-8 col-xxl-7 m-auto">
     <div class="row">
       <div class="col-12 col-md-3 m-auto">
-        <img [routerLink]="'/'" src="assets/logotipo.svg" alt="" class="logo">
+        <img [routerLink]="'/'" src="assets/logotipo.svg" alt="" class="logo" i18n-alt i18n-src>
       </div>
       <ul class="sections1 col-6 col-md-3 m-auto">
-        <li [routerLink]="'/aboutus'">About us</li>
-        <li [routerLink]="'/history'">History</li>
-        <li>Purpose</li>
+        <li [routerLink]="'/aboutus'" i18n>About us</li>
+        <li [routerLink]="'/history'" i18n>History</li>
+        <li i18n>Purpose</li>
       </ul>
       <ul class="sections2 col-6 col-md-3 m-auto">
-        <li>Stories</li>
-        <li>Caring & giving</li>
-        <li>Sustainability</li>
+        <li i18n>Stories</li>
+        <li i18n>Caring & giving</li>
+        <li i18n>Sustainability</li>
       </ul>
       <ul class="social col-12 col-md-3 m-auto">
-        <li>Follow us!</li>
+        <li i18n>Follow us!</li>
         <li><span class="icon-facebook bubble"></span></li>
         <li><span class="icon-instagram bubble"></span></li>
         <li><span class="icon-twitter bubble"></span></li>
@@ -24,5 +24,5 @@
     </div>
   </div>
   <!--img src="assets/ref/footer.png" alt="" class="reference" style=""-->
-  <div class="rights">GUUD&#174; 2023 <span class="separator"></span> Todos los derechos reservados</div>
+  <div class="rights" i18n>GUUD&#174; 2023 <span class="separator"></span> Todos los derechos reservados</div>
 </div>
